--- a/.github/workflows/deploy_live.yml
+++ b/.github/workflows/deploy_live.yml
@@ -18,7 +18,7 @@ jobs:
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.live/;
             php artisan up;
-            php artsian down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
+            php artisan down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
             php artisan environment:updateprepare &&
             php artisan make:githubrelease &&
             php artisan environment:update live &&
