--- a/.github/workflows/deploy_mapping.yml
+++ b/.github/workflows/deploy_mapping.yml
@@ -18,10 +18,10 @@ jobs:
           key: ${{ secrets.DEPLOY_PRIVATE_KEY }}
           script: cd /var/www/html/keystone.guru.mapping/;
             php artisan up;
-            php artisan down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60 &&
+            php artisan down --message "Upgrading keystone.guru, we will be back stronger than ever shortly!" --retry 60;
             php artisan mapping:save &&
             php artisan mapping:commit &&
             php artisan mapping:merge &&
             php artisan environment:updateprepare &&
-            php artisan environment:update mapping &&
+            php artisan environment:update mapping;
             php artisan up
