--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "lang.js": "^1.1.14",
         "laravel-echo": "^1.6.1",
         "laravel-echo-server": "^1.6.2",
+        "lazysizes": "^5.3.0",
         "leaflet": "^1.7.0",
         "leaflet-ant-path": "^1.3.0",
         "leaflet-contextmenu": "^1.4.0",
