--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
     "ext-json": "*",
     "barryvdh/laravel-ide-helper": "^2.4",
     "beyondcode/laravel-server-timing": "^1.2",
+    "diglactic/laravel-breadcrumbs": "^6.1",
     "genealabs/laravel-model-caching": "^0.11.1",
     "geoip2/geoip2": "~2.0",
     "graham-campbell/github": "^9.3",
