--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,7 @@
     "shrikeh/teapot": "^2.3",
     "socialiteproviders/battlenet": "^4.1.0",
     "socialiteproviders/discord": "^4.1.0",
+    "spatie/url": "^1.3",
     "tremby/laravel-git-version": "^1.1",
     "yajra/laravel-datatables-oracle": "~9.0"
   },
