--- a/composer.json
+++ b/composer.json
@@ -66,6 +66,7 @@
     "yajra/laravel-datatables-oracle": "~9.0"
   },
   "require-dev": {
+    "barryvdh/laravel-debugbar": "^3.5",
     "filp/whoops": "^2.0",
     "fzaninotto/faker": "~1.4",
     "mockery/mockery": "^1.0",
