--- a/composer.json
+++ b/composer.json
@@ -64,12 +64,12 @@
     "spatie/url": "^1.3",
     "tray-labs/laravel-influxdb": "dev-master#e0dbca679f297ed5e4d791c429de03704ca2422b",
     "tremby/laravel-git-version": "^1.1",
-    "yajra/laravel-datatables-oracle": "~9.0"
+    "yajra/laravel-datatables-oracle": "~9.0",
+    "fzaninotto/faker": "~1.4"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.5",
     "filp/whoops": "^2.0",
-    "fzaninotto/faker": "~1.4",
     "mockery/mockery": "^1.0",
     "phpunit/phpunit": "^9.0"
   },
