--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,11 @@
     "php": ">=7.4",
     "ext-curl": "*",
     "ext-json": "*",
+    "akaunting/laravel-language": "^1.0",
     "barryvdh/laravel-ide-helper": "^2.4",
     "beyondcode/laravel-server-timing": "^1.2",
     "diglactic/laravel-breadcrumbs": "^6.1",
+    "fzaninotto/faker": "~1.4",
     "genealabs/laravel-model-caching": "^0.11.1",
     "geoip2/geoip2": "~2.0",
     "graham-campbell/github": "^9.3",
@@ -64,8 +66,7 @@
     "spatie/url": "^1.3",
     "tray-labs/laravel-influxdb": "dev-master#e0dbca679f297ed5e4d791c429de03704ca2422b",
     "tremby/laravel-git-version": "^1.1",
-    "yajra/laravel-datatables-oracle": "~9.0",
-    "fzaninotto/faker": "~1.4"
+    "yajra/laravel-datatables-oracle": "~9.0"
   },
   "require-dev": {
     "barryvdh/laravel-debugbar": "^3.5",
