--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=secret
 DB_CONNECTION_MIGRATE=migrate
 DB_MIGRATION_USERNAME=
 DB_MIGRATION_PASSWORD=
+DB_BACKUP_DIR=
 
 MAPPING_BACKUP_DIR=
 
