--- a/composer.json
+++ b/composer.json
@@ -99,6 +99,9 @@
   },
   "config": {
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true
+    }
   }
 }
