--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /resouces/assets/images/tiles
 # Generated file only used for temp output step for inclusion in compiled file
 /resouces/assets/js/handlebars.js
+/resouces/assets/js/precompile.js
 /storage/*.key
 /vendor
 /version
