--- a/.env.example
+++ b/.env.example
@@ -79,8 +79,7 @@ URL_HOST=http://keystone.test
 
 PATREON_CLIENT_ID=
 PATREON_SECRET=
-PATREON_CREATOR_ACCESS_TOKEN=
-PATREON_CREATOR_REFRESH_TOKEN=
+PATREON_CAMPAIGN_ID=
 
 GOOGLE_SIGNIN_CLIENT_ID=
 GOOGLE_SIGNIN_CLIENT_SECRET=
